@@ -7,6 +7,7 @@
   set to the default value
 * added strbol validation
 * nil long options are now respected
+* added additional options to ConfigParser.parse
     
 == 0.5.0 / 2009-05-25
 
